[package]
name = "veter"
description = "Service for communication between Jelka FMF components"
authors = ["Programerski klub FMF"]
repository = "https://github.com/Jelka-FMF/Veter"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
codegen-units = 1
strip = true
lto = true

[dependencies]
config = "0.15.19"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive", "rc"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
warp = { version = "0.4.2", features = ["server", "websocket"] }
